kubernetes/velero/rclone-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment

metadata:
  name: velero-encrypt
  labels:
    app.kubernetes.io/name: velero-encrypt
  annotations:
    reloader.stakater.com/auto: 'true'

spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: velero-encrypt
  template:
    metadata:
      labels:
        app.kubernetes.io/name: velero-encrypt
    spec:
      containers:
      - name: velero-encrypt
        image: rclone/rclone:1.75.1@sha256:45401ad7410db1d67ffdb58e19059ad20b0d8e0285a60e38bbec55cc1019c7a5
        command:
        - /scripts/start.sh
        - serve
        - s3
        - 'hetzner_velero:'
        - --force-path-style=true
        - --addr=:8080
        - --log-level=INFO
        - --vfs-cache-mode=off
        - --no-cleanup
        imagePullPolicy: IfNotPresent
        ports:
        - name: http
          containerPort: 8080
          protocol: TCP
        volumeMounts:
        - name: secrets
          mountPath: /secrets
          readOnly: true
        - name: scripts
          mountPath: /scripts
          readOnly: true
      volumes:
      - name: secrets
        secret:
          secretName: velero-encrypt
      - name: scripts
        configMap:
          name: velero-encrypt-startup
          defaultMode: 0755
