kubernetes/velero/rclone-service.yaml
---
apiVersion: v1
kind: Service

metadata:
  name: velero-encrypt
  labels:
    app.kubernetes.io/name: velero-encrypt

spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: http
    protocol: TCP
    name: http
  selector:
    app.kubernetes.io/name: velero-encrypt
